k8s/dev/setup.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-policy
  namespace: talent-metric-dev
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
    ports:
    - protocol: TCP
      port: 5000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-egress-policy
  namespace: talent-metric-dev
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
  - Egress
  egress:
  - ports:
    - protocol: TCP
      port: 3306
  - ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
---
#BACKEND DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: talent-metric-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: talent-metric-sa
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: backend
        image: 382625484581.dkr.ecr.us-east-1.amazonaws.com/talent-metric-backend:8f31dd9b49ba006f76131e7be6591995e1955691
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
        ports:
        - containerPort: 5000
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
---
#BACKEND SERVICE
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: talent-metric-dev
spec:
  selector:
    app: backend
  ports:
  - port: 5000
    targetPort: 5000
---
#FRONTEND DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: talent-metric-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        fsGroup: 101
      volumes:
      - name: nginx-cache
        emptyDir: {}
      - name: nginx-run
        emptyDir: {}
      - name: nginx-conf
        configMap:
          name: nginx-config
      containers:
      - name: frontend
        image: 382625484581.dkr.ecr.us-east-1.amazonaws.com/talent-metric-frontend:8f31dd9b49ba006f76131e7be6591995e1955691
        securityContext:
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "200m"
            memory: "128Mi"
          requests:
            cpu: "100m"
            memory: "64Mi"
        volumeMounts:
        - name: nginx-cache
          mountPath: /var/cache/nginx
        - name: nginx-run
          mountPath: /var/run
        - name: nginx-conf
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
---
#BACKEND SERVICE
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: talent-metric-dev
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
---
#INGRESS SETUP
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: talent-metric-ingress
  namespace: talent-metric-dev
  annotations:
    alb.ingress.kubernetes.io/group.name: shared-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:382625484581:certificate/2600942e-08ba-445f-9ef6-20efc744a79d
spec:
  ingressClassName: alb
  rules:
  - host: dev-talent-metric.athivaone.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
